commit après mini démo

--- a/views/index.twig
+++ b/views/index.twig
@@ -48,7 +48,7 @@
         <div class='uk-padding uk-flex'>
         {% for card in hand %}
           <figure>
-            <img width=100 src="/images/cards/{{ card.name }}.png">
+            <img width=100 src="/images/cards/blue_back.png">
             <figcaption>{{ card.value }} - {{ card.color }}</figcaption>
           </figure>
         {% endfor %}
